<resources>
    <string name="app_name">Крепость мусульманина</string>

    <!--    Database-->
    <string name="database_name">DatabaseContent_ru</string>
    <string name="database_exception">Ошибка:</string>

    <!--    Permissions-->
    <string name="permissions_failure">Вы не предоставили доступ</string>
    <string name="permissions_waring">ВНИМАНИЕ</string>
    <string name="permissions_text">Для того, что бы скачать аудио на телефон, Вы должны предоставить доступ к хранилищу</string>
    <string name="permissions_ok">Предоставить</string>
    <string name="permissions_cancel">Отмена</string>

    <!--    Search tint text's-->
    <string name="action_search_by_chapters">Поиск по главам…</string>
    <string name="action_search_by_favorite_chapters">Поиск избранным по главам…</string>
    <string name="action_search_by_favorite_supplications">Поиск дуа…</string>
    <string name="action_search_by_supplications">Поиск избранным дуа…</string>

    <!--    NavigationView menu-->
    <string name="navigation_drawer_open">Открыть навигационный ящик</string>
    <string name="navigation_drawer_close">Закрыть навигационный ящик</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_download_all">Скачать все дуа</string>
    <string name="nav_night_mode">Ночной режим</string>
    <string name="nav_additionally">Дополнительно</string>
    <string name="nav_about_us">О нас</string>
    <string name="nav_rate_app">Оценить</string>
    <string name="nav_share_link">Поделиться</string>

    <!--    Settings-->
    <string name="action_settings">Настройки</string>
    <string name="action_fonts">Шрифт:</string>
    <string name="action_arabic_text">Арабский текст</string>
    <string name="font_arabic_one">Uthmanic Script</string>
    <string name="font_arabic_two">Quran</string>
    <string name="font_arabic_three">Droid naskh</string>
    <string name="action_other_text">Другой текст</string>
    <string name="font_other_one">Gilroy</string>
    <string name="font_other_two">Times new roman</string>
    <string name="font_other_three">Cambria</string>
    <string name="action_text_size">Размер текста:</string>
    <string name="action_text_color">Цвет текста:</string>
    <string name="action_transcription_text">Транскрипция</string>
    <string name="action_translation_text">Перевод</string>
    <string name="action_showing_texts">Отображение текста:</string>
    <string name="action_show_state_transcription">Транскрипция</string>
    <string name="action_show_state_transcription_on">Транскрипция отключена</string>
    <string name="action_show_state_transcription_off">Транскрипция включена</string>
    <string name="action_show_state_translation">Перевод</string>
    <string name="action_show_state_translation_on">Перевод отключён</string>
    <string name="action_show_state_translation_off">Перевод включён</string>

    <!--    About us-->
    <string name="action_about_us">О нас</string>
    <string name="action_about_us_text">
        <b>JMApps</b> - серия бесплатных и безрекламных андроид-приложений для мусульман.\n\n

        Вы можете следить за обновлением старых и изданием новых приложений в наших соцсетях:\n\n

        ВКонтакте: www.vk.com/JMApps\n
        Telegram: t.me/JMApps\n
        Facebook: www.facebook.com/JMAppsM\n
        Instagram: www.instagram.com/dev_muslim\n\n

        По всем вопросам, предложениям и скритикой можете писать нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>

    <!--    Favorites-->
    <string name="favorite_chapter_description">Добавьте избранные главы</string>
    <string name="favorite_supplication_description">Добавьте избранные дуа</string>
    <string name="favorite_add">Добавлено в избранное</string>
    <string name="favorite_removed">Удалено из избранного</string>

    <!--    Content-->
    <string name="copied_to_clipboard">Скопировано в буфер</string>

    <!--    Download-->
    <string name="download_starting">Скачивание начинается…</string>
    <string name="download_downloading">Скачивание…</string>
    <string name="download_complete">Скачивание завершено</string>
    <string name="download_waiting">Пожалуйста, дождидесь пока завершится скачивание…</string>
    <string name="download_checking_connect">Проверьте подключение к интернету</string>

    <!--    Content chapter-->
    <string name="title_activity_content_chapter">Глава</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>